bloonix-heaven (0.9) released at 2015-03-21

    * ProcManager and FCGI were splittet into 2 modules.

bloonix-heaven (0.8) released at 2014-12-18

    * Now views are not processed if a redirect is active.

bloonix-heaven (0.7) released at 2014-12-12

    * New accessor text() added.
    * Improved variable handling in templates.

bloonix-heaven (0.6) released at 2014-12-11

    * Regex for E-Mail addresses extended. The sign "=" is now allowed.

bloonix-heaven (0.5) released at 2014-12-08

    * Fixed collection process size statistics. /proc/$pid/statm
      is not available on other operation systems.
    * Implemented include and wrapper for Heaven/Template.pm.
    * Making the template cache persistent.
    * Added argument cache_enabled to enable/disable the template
      cache.
    * Fixed undefined values warning in templates. Added // ''.
    * Added line numbers to the template code.

bloonix-heaven (0.4) released at 2014-11-03

    * Updated the license information.

bloonix-heaven (0.3) released at 2014-10-24

    * Disable die_on_errors by default so that the logger
      does not die on errors.

bloonix-heaven (0.2) released at 2014-10-16

    * Improved the error handling.
    * Added parameter "minimal" to validate().
    * Deleted ModelLoader.pm.

bloonix-heaven (0.1) released at 2011-02-04

    * Initial release.