@@ -1,3 +1,7 @@
+bloonix-heaven (0.10) released at 2015-04-14
+
+    * Bloonix::Validator can now return mandatory parameters.
+
 bloonix-heaven (0.9) released at 2015-03-21
 
     * ProcManager and FCGI were splittet into 2 modules.
